--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
                 <img src="./assets/pictures/logo-text.png" alt="magicMassage*">
             </a>
             <nav id="landing-navbar">
-                <a href="">Why MagicMassage</a>
-                <a href="">Features</a>
+                <a href="#">Why MagicMassage</a>
+                <a href="./offers.html">Features</a>
                 <a href="">Reviews</a>
                 <a href="">FAQ</a>
             </nav>
-            <button>order now</button>
+            <a href="./offers.html">
+                <button>order now</button>
+            </a>
         </header>
         <div class="hr"></div>
         <main>
@@ -66,8 +68,12 @@
                         </div>
                     </div>
                     <div class="flex-column">
-                        <button id="additional-main-button">Get The MagicMassage™ Now</button>
-                        <button id="additional-secondary-button">Bundles from <span>$41.50</span> each</button>
+                        <a href="./offers.html">
+                            <button id="additional-main-button">Get The MagicMassage™ Now</button>
+                        </a>
+                        <a href="./offers.html">
+                            <button id="additional-secondary-button">Bundles from <span>$41.50</span> each</button>
+                        </a>
                     </div>
                 </div>
                 <img src="./assets/pictures/2massagers.png" alt="massagers">
