reviews page done

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             </a>
             <nav id="landing-navbar">
                 <a href="#">Why MagicMassage</a>
-                <a href="./offers.html">Features</a>
-                <a href="">Reviews</a>
-                <a href="">FAQ</a>
+                <a href="./pages/offers.html">Features</a>
+                <a href="./pages/reviews.html">Reviews</a>
+                <a href="./pages/faq.html">FAQ</a>
             </nav>
-            <a href="./offers.html">
+            <a href="./pages/offers.html">
                 <button>order now</button>
             </a>
         </header>
@@ -68,10 +68,10 @@
                         </div>
                     </div>
                     <div class="flex-column">
-                        <a href="./offers.html">
+                        <a href="./pages/offers.html">
                             <button id="additional-main-button">Get The MagicMassage™ Now</button>
                         </a>
-                        <a href="./offers.html">
+                        <a href="./pages/offers.html">
                             <button id="additional-secondary-button">Bundles from <span>$41.50</span> each</button>
                         </a>
                     </div>
