landing responsive done

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -5,8 +5,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ</title>
+    <link rel="stylesheet" href="../styles/faq.css">
+    <script src='../scripts/faq.js' defer></script>
 </head>
 <body>
-    
+    <div id="main-container">
+        <div id="header" class='flex-row center'>
+            <h1>Frequently Asked <span>Questions</span> </h1>
+        </div>
+        <div class="flex-row" id='faq-content'>
+            <div id='faq-img'>
+                <img src="../assets/pictures/faq-pic.png" alt="">
+            </div>
+            <div id='dropdowns flex-column'>
+                <div class='dropdown'>
+                   <div class="select">
+                    <span class="selected">
+                        How long does the battery last fully charged?
+                    </span>
+                    <div class="caret"></div>
+                   </div>
+                   <div class="menu">
+                    <p>The MagicMassage™ can last up to 6 hours when it's fully charged.</p>
+                   </div>
+                </div>
+                <div class='dropdown'>
+                   <div class="select">
+                    <span class="selected">
+                        Can I use it in the shower?
+                    </span>
+                    <div class="caret"></div>
+                   </div>
+                   <div class="menu">
+                    <p>The MagicMassage™ can last up to 6 hours when it's fully charged.</p>
+                   </div>
+                </div>
+                <div class='dropdown'>
+                   <div class="select">
+                    <span class="selected">
+                        What is included in the package
+                    </span>
+                    <div class="caret"></div>
+                   </div>
+                   <div class="menu">
+                    <p>The MagicMassage™ can last up to 6 hours when it's fully charged.</p>
+                   </div>
+                </div>
+
+                <div class='dropdown'>
+                   <div class="select">
+                    <span class="selected">
+                        Is the MagicMassage™ designed only for the head?
+                    </span>
+                    <div class="caret"></div>
+                   </div>
+                   <div class="menu">
+                    <p>The MagicMassage™ can last up to 6 hours when it's fully charged.</p>
+                   </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
