--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <div class="flex-row">
                 <h1 id="landing-h1">All-in-one massager that works like <span>Magic!</span></h1>
                 <img id="landing-arrow-icon" src="./assets/pictures/Arrow.png" alt="arrow">
+                <img class='responsive' src="./assets/pictures/2massagers.png" alt="">
             </div>
             <div class="landing-main-info">
                 <div class="flex-column" id="landing-mainTextAndBoxes">
@@ -79,21 +80,23 @@
                 <img src="./assets/pictures/2massagers.png" alt="massagers">
             </div>
         </main>
-        <div id="review-container">
-            <div id="review-image-div">
-                <img src="./assets/pictures/user.jpg" alt="">
-            </div>
-            <div class="flex-column">
-                <p id="review-comment">“It feels amazing on my head and it soothes muscle tension. “</p>
-                <div class="flex-row" id="review-info">
-                    <div class="flex-row" id="space-between">
-                        <div class="flex-row">
-                            <img id="stars" src="./assets/pictures/stars.png" alt="5 stars">
-                            <p id="review-author">Debra N.</p>
-                        </div>
-                        <div class="flex-row" id="margin-right">
-                            <img src="./assets/pictures/mark.png" alt="mark">
-                            <p id="review-verified">VERIFIED BUYER</p>
+        <div id='review-div'>
+            <div id="review-container">
+                <div id="review-image-div">
+                    <img src="./assets/pictures/user.jpg" alt="">
+                </div>
+                <div class="flex-column">
+                    <p id="review-comment">“It feels amazing on my head and it soothes muscle tension. “</p>
+                    <div class="flex-row" id="review-info">
+                        <div class="flex-row" id="space-between">
+                            <div class="flex-row">
+                                <img id="stars" src="./assets/pictures/stars.png" alt="5 stars">
+                                <p id="review-author">Debra N.</p>
+                            </div>
+                            <div class="flex-row" id="margin-right">
+                                <img src="./assets/pictures/mark.png" alt="mark">
+                                <p id="review-verified">VERIFIED BUYER</p>
+                            </div>
                         </div>
                     </div>
                 </div>
