Reviews & FAQ pages responsive done

--- a/pages/offers.html
+++ b/pages/offers.html
@@ -13,21 +13,22 @@
     <div id="root"></div>
     <div id="main-container">
         <div id="offers-top" class="flex-row">
-            <div class="flex-row" id="offers-main-div">
+            <div class="flex-row offers-main-div">
                 <div class="round">
                     <img src="../assets/pictures/offer-1.png" alt="">
                 </div>
-                <p>FREE 2-DAY SHIPPING IN THE UNITED STATES!</p>
+                <p id='shipping-hide'>FREE 2-DAY SHIPPING IN THE UNITED STATES!</p>
+                <p class='none'>FREE 2-DAY USA SHIPPING</p>
             </div>
 
-            <div class="flex-row" id="offers-main-div">
+            <div class="flex-row offers-main-div">
                 <div class="round">
                     <img src="../assets/pictures/offer-2.png" alt="">
                 </div>
                 <p>30 DAY 100% MONEY BACK GUARANTEE</p>
             </div>
 
-            <div class="flex-row" id="offers-main-div">
+            <div class="flex-row responsive-none offers-main-div">
                 <div class="round">
                     <img src="../assets/pictures/offer-3.png" alt="">
                 </div>
