--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -15,12 +15,12 @@
             </h1>
         </div>
         <div class='flex-row' id='stars'>
-            <div class='flex-row'>
+            <div class='flex-row' id='responsive-column'>
                 <img src="../assets/pictures/stars.png" alt="">
                 <span>131 TOTAL REVIEWS</span>
             </div>
-            <a href="https://www.linkedin.com/in/beqa-khadilashvili-59807b222/?originalSubdomain=ge" target='_blank'>
-                <button id='review-button'>Write a review</button>
+            <a href="../index.html">
+                <button id='review-button'>Go back</button>
             </a>
         </div>
         <div class='flex-row' id='cards'>
