--- a/index.html
+++ b/index.html
@@ -80,28 +80,30 @@
                 <img src="./assets/pictures/2massagers.png" alt="massagers">
             </div>
         </main>
-        <div id='review-div'>
-            <div id="review-container">
-                <div id="review-image-div">
-                    <img src="./assets/pictures/user.jpg" alt="">
-                </div>
-                <div class="flex-column">
-                    <p id="review-comment">“It feels amazing on my head and it soothes muscle tension. “</p>
-                    <div class="flex-row" id="review-info">
-                        <div class="flex-row" id="space-between">
-                            <div class="flex-row">
-                                <img id="stars" src="./assets/pictures/stars.png" alt="5 stars">
-                                <p id="review-author">Debra N.</p>
-                            </div>
-                            <div class="flex-row" id="margin-right">
-                                <img src="./assets/pictures/mark.png" alt="mark">
-                                <p id="review-verified">VERIFIED BUYER</p>
+        <a href="./pages/reviews.html">
+            <div id='review-div'>
+                <div id="review-container">
+                    <div id="review-image-div">
+                        <img src="./assets/pictures/user.jpg" alt="">
+                    </div>
+                    <div class="flex-column">
+                        <p id="review-comment">“It feels amazing on my head and it soothes muscle tension. “</p>
+                        <div class="flex-row" id="review-info">
+                            <div class="flex-row" id="space-between">
+                                <div class="flex-row">
+                                    <img id="stars" src="./assets/pictures/stars.png" alt="5 stars">
+                                    <p id="review-author">Debra N.</p>
+                                </div>
+                                <div class="flex-row" id="margin-right">
+                                    <img src="./assets/pictures/mark.png" alt="mark">
+                                    <p id="review-verified">VERIFIED BUYER</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+         </a>
     </div>
 </body>
 </html>
